Tudo - validacao no servidor e cadastro servico_peca

--- a/src/main/resources/templates/pecaupdate.html
+++ b/src/main/resources/templates/pecaupdate.html
@@ -31,7 +31,7 @@
             </div>
             <div>
                 <br>
-                <form name = "form1" class="form1"method="get" action="/pecaedit">
+                <form name = "form1" class="form1"method="get" action="/pecaedit/">
                     <table>
                         <tbody>
                         <tr>
