--- a/src/main/resources/templates/servicocadastro.html
+++ b/src/main/resources/templates/servicocadastro.html
@@ -78,7 +78,7 @@
                         <tr>
                             <td class="normal">Data Inicio: </td>
                             <td class="normal">
-                                <input type="text" size="2" id="dia" name="dia" maxlength="2">
+                                <input type="text" size="2" id="dia1" name="dia1" maxlength="2">
                                 <select id="mes1" name="mes1">
                                     <option value="1">Janeiro</option>
                                     <option value="2">Fevereiro</option>
@@ -93,7 +93,7 @@
                                     <option value="11">Novembro</option>
                                     <option value="12">Dezembro</option>
                                 </select>
-                                <input type="text" size="4" id="ano" name="ano" maxlength="4">
+                                <input type="text" size="4" id="ano1" name="ano1" maxlength="4">
                             </td>
                         </tr>
 
