--- a/src/main/resources/templates/servicoupdate.html
+++ b/src/main/resources/templates/servicoupdate.html
@@ -31,7 +31,7 @@
             </div>
             <div id="inferior">
                 <br>
-                <form name = "form1" class="form1"method="get" action="/servicoedit">
+                <form name = "form1" class="form1" method="post" action="/servicoedit/">
                     <table>
                         <tbody>
                         <tr>
@@ -78,40 +78,8 @@
                         <tr>
                             <td class="normal">Data Inicio: </td>
                             <td class="normal">
-                                <select id="dia1" name="dia1">
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>
-                                    <option value="5">5</option>
-                                    <option value="6">6</option>
-                                    <option value="7">7</option>
-                                    <option value="8">8</option>
-                                    <option value="9">9</option>
-                                    <option value="10">10</option>
-                                    <option value="11">11</option>
-                                    <option value="12">12</option>
-                                    <option value="13">13</option>
-                                    <option value="14">14</option>
-                                    <option value="15">15</option>
-                                    <option value="16">16</option>
-                                    <option value="17">17</option>
-                                    <option value="18">18</option>
-                                    <option value="19">19</option>
-                                    <option value="20">20</option>
-                                    <option value="21">21</option>
-                                    <option value="22">22</option>
-                                    <option value="23">23</option>
-                                    <option value="24">24</option>
-                                    <option value="25">25</option>
-                                    <option value="26">26</option>
-                                    <option value="27">27</option>
-                                    <option value="28">28</option>
-                                    <option value="29">29</option>
-                                    <option value="30">30</option>
-                                    <option value="31">31</option>
-                                </select>
-                                <select id="mes1" name="mes1">
+                                <input type="text" size="2" id="dia1" name="dia1" maxlength="2" value="{{dia1}}">
+                                <select id="mes1" name="mes1" >
                                     <option value="1">Janeiro</option>
                                     <option value="2">Fevereiro</option>
                                     <option value="3">Mar&ccedil;o</option>
@@ -125,46 +93,14 @@
                                     <option value="11">Novembro</option>
                                     <option value="12">Dezembro</option>
                                 </select>
-                                <input type="text" size="4" id="ano" name="ano" value="{{ano1}}"><!--4-->
+                                <input type="text" size="4" id="ano1" name="ano1" value="{{ano1}}"><!--4-->
                             </td>
                         </tr>
 
                         <tr>
                             <td class="normal">Data Fim: </td>
                             <td class="normal">
-                                <select id="dia2" name="dia2">
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>
-                                    <option value="5">5</option>
-                                    <option value="6">6</option>
-                                    <option value="7">7</option>
-                                    <option value="8">8</option>
-                                    <option value="9">9</option>
-                                    <option value="10">10</option>
-                                    <option value="11">11</option>
-                                    <option value="12">12</option>
-                                    <option value="13">13</option>
-                                    <option value="14">14</option>
-                                    <option value="15">15</option>
-                                    <option value="16">16</option>
-                                    <option value="17">17</option>
-                                    <option value="18">18</option>
-                                    <option value="19">19</option>
-                                    <option value="20">20</option>
-                                    <option value="21">21</option>
-                                    <option value="22">22</option>
-                                    <option value="23">23</option>
-                                    <option value="24">24</option>
-                                    <option value="25">25</option>
-                                    <option value="26">26</option>
-                                    <option value="27">27</option>
-                                    <option value="28">28</option>
-                                    <option value="29">29</option>
-                                    <option value="30">30</option>
-                                    <option value="31">31</option>
-                                </select>
+                                <input type="text" size="2" id="dia2" name="dia2" maxlength="2" value="{{dia2}}">
                                 <select id="mes2" name="mes2">
                                     <option value="1">Janeiro</option>
                                     <option value="2">Fevereiro</option>
