--- a/src/main/resources/templates/veiculoupdate.html
+++ b/src/main/resources/templates/veiculoupdate.html
@@ -31,7 +31,7 @@
             </div>
             <div id="inferior">
                 <br>
-                <form name = "form1" class="form1"method="get" action="/veiculoinsert">
+                <form name = "form1" class="form1"method="get" action="/veiculoedit/">
                     <table>
                         <tbody>
                         <tr>
