--- a/src/main/resources/templates/clientefisicocadastro.html
+++ b/src/main/resources/templates/clientefisicocadastro.html
@@ -31,7 +31,7 @@
             </div>
             <div id="inferior">
                 <br>
-                <form name = "form1" class="form1" action="/clienteinsert/f" method="post">
+                <form name = "form1" class="form1" action="/clienteinsert/" method="post">
                     <table>
                         <tbody>
                         <tr>
@@ -104,7 +104,7 @@
                     </table>
                     <br>
                     <input type="hidden" name="tipo" value="f">
-                    <input id="criar" type="submit" value="Cadastrar">
+                    <button id="criar" type="button" onclick="validaFisico()">Cadastrar</button>
                     </div>
                     </div>
                 </form>
