--- a/src/main/resources/templates/clientefisicoupdate.html
+++ b/src/main/resources/templates/clientefisicoupdate.html
@@ -106,7 +106,7 @@
                     </table>
                     <br>
                     <input type="hidden" name="tipo" value="f">
-                    <input id="criar" type="submit" value="Alterar">
+                    <button id="criar" type="button" onclick="validaFisico()">Alterar</button>
                     </div>
                     </div>
                 </form>
