--- a/src/main/resources/templates/clientejuridicoupdate.html
+++ b/src/main/resources/templates/clientejuridicoupdate.html
@@ -107,7 +107,7 @@
                     </table>
                     <br>
                     <input type="hidden" name="tipo" value="j">
-                    <input id="criar" type="submit" value="Alterar">
+                    <button id="criar" type="button" onclick="validaJuridico()">Alterar</button>
                     </div>
                     </div>
                 </form>
