--- a/src/main/resources/templates/funcionarioupdate.html
+++ b/src/main/resources/templates/funcionarioupdate.html
@@ -106,7 +106,7 @@
                         </tbody>
                     </table>
                     <br>
-                    <input id="criar" type="submit" value="Alterar">
+                    <button id="criar" type="button" onclick="validaFisico()">Alterar</button>
                     </div>
                     </div>
                 </form>
