--- a/src/main/resources/templates/peca.html
+++ b/src/main/resources/templates/peca.html
@@ -43,8 +43,8 @@
                     <td>{{nome}}</td>
                     <td>{{fornecedor}}</td>
                     <td>{{valor}}</td>
-                    <td><a href="/pecaedit" class="views">Editar</a></td>
-                    <td><a href="/pecadelete" class="views">Remover</a></td>
+                    <td><a href="/pecaupdate/{{id}}" class="views">Editar</a></td>
+                    <td><a href="/pecadelete/{{id}}" class="views">Remover</a></td>
                 </tr>
                 {{/pecas}}
                 </tbody>
