--- a/src/main/resources/templates/pecaupdate.html
+++ b/src/main/resources/templates/pecaupdate.html
@@ -57,7 +57,7 @@
                     </table>
                     <br>
                     <input type="hidden" value="{{id}}">
-                    <input id="criar" type="submit" value="Alterar">
+                    <button id="criar" type="button" onclick="validaPeca()">Alterar</button>
                     </div>
                     </div>
                 </form>
