--- a/src/main/resources/templates/servicocadastro.html
+++ b/src/main/resources/templates/servicocadastro.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="projetao.css" type="text/css" rel="stylesheet">
-        <script src="/projetao.js" type="text/javascript"></script>
+        <script src="projetao.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -128,26 +128,25 @@
                             </td>
                         </tr>
                         <tr>
-                            <td class="normal">Tipos de Pe&ccedil;as: </td>
+                            <td class="normal">Pe&ccedil;a: </td>
+                            <td>
+                                
+                                <select id="peca" name="peca">
+                                    {{#pecas}}
+                                <option value="{{id}}">{{nome}}</option>
+                                {{/pecas}}
+                                </select>
+                                
+                                </td>
                             <td class="normal">
-                                <input type="text" size="5" id="tipos" name="tipos" onblur="quantidade()">
+                                <input type="text" size="5" id="unidade" name="unidade">
                             </td>
                         </tr>
                         
                         </tbody>
                     </table>
-                    
-                    <div>
-                        <table>
-                            <tbody id="conteudo">
-                                
-                                
-                            </tbody>
-                        </table>
-                        
-                    </div>
                     <br><br>
-                    <input id="criar" type="submit" value="Cadastrar">
+                    <button id="criar" type="button" onclick="validaServico()">Cadastrar</button>
                     </div>
                     </div>
                 </form>
