--- a/src/main/resources/templates/veiculo.html
+++ b/src/main/resources/templates/veiculo.html
@@ -51,8 +51,8 @@
                     <td>{{modelo}}</td>
                     <td>{{marca}}</td>
                     <td>{{ano}}</td>
-                    <td><a href="/veiculoedit" class="views">Editar</a></td>
-                    <td><a href="/veiculodelete" class="views">Remover</a></td>
+                    <td><a href="/veiculoupdate/{{id}}" class="views">Editar</a></td>
+                    <td><a href="/veiculodelete/{{id}}" class="views">Remover</a></td>
                 </tr>
                 {{/veiculos}}
                 </tbody>
