--- a/src/main/resources/templates/clientejuridicocadastro.html
+++ b/src/main/resources/templates/clientejuridicocadastro.html
@@ -31,7 +31,7 @@
             </div>
             <div id="inferior">
                 <br>
-                <form name = "form1" class="form1" action="/clienteinsert" method="post">
+                <form name = "form1" class="form1" action="/clienteinsert/" method="post">
                     <table>
                         <tbody>
                             <tr>
@@ -105,7 +105,7 @@
                     </table>
                     <br>
                     <input type="hidden" name="tipo" value="j">
-                    <input id="criar" type="submit" value="Cadastrar">
+                    <button id="criar" type="button" onclick="validaJuridico()">Cadastrar</button>
                     </div>
                     </div>
         
