--- a/src/main/resources/templates/pecacadastro.html
+++ b/src/main/resources/templates/pecacadastro.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="projetao.css" type="text/css" rel="stylesheet">
+        <script type="text/javascript" src="projetao.js"></script>
     </head>
 
     <body>
@@ -30,7 +31,7 @@
             </div>
             <div>
                 <br>
-                <form name = "form1" class="form1"method="get" action="/pecainsert">
+                <form name = "form1" class="form1"method="get" action="/pecainsert/">
                     <table
                         <tbody>
                             <tr>
@@ -55,7 +56,7 @@
                         </tbody>
                     </table>
                     <br>
-                    <input id="criar" type="submit" value="Cadastrar">
+                    <button id="criar" type="button" onclick="validaPeca()">Alterar</button>
                     </div>
                     </div>
                 </form>
