--- a/src/main/resources/templates/servico_peca.html
+++ b/src/main/resources/templates/servico_peca.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="/projetao.css" type="text/css" rel="stylesheet">
+        <script src="/projetao.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -53,6 +54,8 @@
                     </tr>
                 </tbody>
             </table>
+            <h4>Situa&ccedil;&atilde;o Pago({{pago}})</h4><br>
+            <a href="/pagar/{{id}}" class="views" id="pagar">Pagar</a>
         </div>
     </center>
     <div id='div3' name='div3'>
