--- a/src/main/resources/templates/veiculocadastro.html
+++ b/src/main/resources/templates/veiculocadastro.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="projetao.css" type="text/css" rel="stylesheet">
+        <script src="projetao.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -50,7 +51,7 @@
                         <tr>
                             <td class="normal">Placa: </td>
                             <td class="normal">
-                                <input type="text" size="35" id="placa" name="placa" maxlength="6">
+                                <input type="text" size="35" id="placa" name="placa" maxlength="8">
                             </td>
                         </tr>
 
@@ -84,7 +85,7 @@
                         </tbody>
                     </table>
                     <br>
-                    <input id="criar" type="submit" value="Cadastrar">
+                    <button id="criar" type="button" onclick="validaVeiculo()">Cadastrar</button>
                     </div>
                     </div>
                 </form>
